Ingress/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-fanout
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - http:
      paths:
      - path: /braga/agendamento/
        backend:
          serviceName: agendamentobraga
          servicePort: 80
      - path: /braga/pagamento/*
        backend:
          serviceName: pagamentobraga
          servicePort: 80
      - path: /porto/agendamento/
        backend:
          serviceName: agendamentoporto
          servicePort: 80
      - path: /porto/pagamento
        backend:
          serviceName: pagamentoporto
          servicePort: 80
